# toys

./: .gitignore  Cargo.toml  index.html
assets/: sw.js
database/: db_start.ps1  user.sql
src/: app.rs  main.rs
src/app/: mod.rs
src/app/config/: cal.rs  mod.rs
src/app/view/: header.rs  menu.rs  mod.rs
src/app/view/page/: calculator.rs  font_book.rs  home.rs  mod.rs
src/app/worker/: calculator.rs  header.rs  menu.rs  mod.rs
src/ui/: header.rs  menu.rs  mod.rs
src/ui/page/: font_book.rs  home.rs  mod.rs
toy-schema/: Cargo.toml
toy-schema/src/: sign.rs
toy-server/: Cargo.toml  README.md
toy-server/src/: config.rs  error.rs  init.rs  main.rs  web.rs
toy-server/src/web/: auth.rs  content_type_utf8_mw.rs  database.rs  mod.rs  session.rs  speedy_data.rs
toy-server/src/web/sudoku/: mod.rs  traversal.rs
toys/: Cargo.toml  Dioxus.toml  README.md  index.html  package.json  tailwind.config.js
toys/src/: error.rs  lib.rs  main.rs
toys/src/service/: config.rs  login.rs  mod.rs  sign.rs  sudoku.rs
toys/src/ui/: config.rs  header.rs  home.rs  menu.rs  mod.rs  proofreading.rs  route.rs  sign.rs  sudoku.rs
toys/src/ui/config/: mod.rs
toys/src/ui/fight_the_landlord/: card.rs  game_init.rs  game_play.rs  mod.rs
toys/src/ui/home/: mod.rs
toys/src/ui/proofreading/: mod.rs
toys/src/ui/sign/: mod.rs
toys/src/ui/sudoku/: cell.rs  mod.rs
