[package]
name = "toys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "*", features = ["persistence"] }
egui_extras = { version = "*", features = ["svg"] }
anyhow = { version = "*" }
serde = { version = "*" }
rfd = { version = "*" }
unicode_names2 = { version = "*", default-features = false }
thiserror = { version = "*" }
docx-rs = { version = "*" }
calamine = { version = "*" }
fastrand = { version = "*" }
rust_decimal = { version = "*" }
rayon = { version = "*" }
futures = { version = "*", features = ["executor", "thread-pool"] }
async-channel = { version = "*" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "*" }
#tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "*"
time = { version = "*", features = ["wasm-bindgen"] }
console_error_panic_hook = "*"
tracing-wasm = "*"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
