[package]
name = "toy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = { version = "*" }
async-std = { version = "*", features = ["tokio1"] }
ctrlc = { version = "*" }
toml = { version = "*" }
poem = { version = "*", features = ["anyhow", "compression", "session", "static-files"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
surrealdb = { version = "*", features = ["kv-rocksdb"] }
thiserror = { version = "*" }
time = { version = "*" }
tracing = { version = "*" }
tracing-appender = { version = "*" }
tracing-subscriber = { version = "*", features = ["local-time"] }
