[package]
name = "toy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = { version = "*" }
async-std = { version = "*", features = ["tokio1"] }
async-trait = { version = "*" }
ctrlc = { version = "*" }
indextree = { version = "*" }
mime = { version = "*" }
toml = { version = "*" }
poem = { version = "*", features = ["anyhow", "compression", "session", "static-files", "rustls", "test"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
speedy = { version = "*" }
surrealdb = { version = "*", features = ["kv-surrealkv"] }
thiserror = { version = "*" }
time = { version = "*" }
toy-schema = { path = "../toy-schema" }
tracing = { version = "*" }
tracing-appender = { version = "*" }
tracing-subscriber = { version = "*", features = ["local-time"] }
