[package]
name = "toy-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = { version = "*" }
async-trait = { version = "*" }
fastrace = { version = "*", features = ["enable"] }
fastrace-opentelemetry = { version = "*" }
futures = { version = "*" }
indextree = { version = "*" }
log = { version = "*" }
logforth = { version = "*", features = ["rolling-file", "fastrace"] }
mime = { version = "*" }
opentelemetry = { version = "*", features = ["trace"] }
opentelemetry-otlp = { version = "*", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "*", features = ["trace"] }
poem = { version = "*", features = ["anyhow", "compression", "session", "static-files", "rustls", "test"] }
rustls = {version = "*" , features = ["ring"]}
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
speedy = { version = "*" }
surrealdb = { version = "*", features = ["kv-surrealkv"] }
thiserror = { version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "*" }
tonic = { version = "0.12.3", default-features = false }
toy-schema = { path = "../toy-schema" }
