[package]
name = "toys"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "*" }
dioxus-router = { version = "*" }
futures-util = { version = "*" }
reqwest = { version = "*", features = ["cookies"] }
speedy = { version = "*" }
strum = { version = "*", features = ["derive"] }
thiserror = { version = "*" }
toy-schema = { path = "../toy-schema" }
tracing = { version = "*" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "*", features = ["desktop"] }
dioxus-desktop = { version = "*" }
time = { version = "*" }
tracing-subscriber = { version = "*", features = ["local-time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "*" }
dioxus = { version = "*", features = ["web"] }
dioxus-web = { version = "*" }
tracing-wasm = { version = "*" }
web-sys = { version = "*" }
