[package]
name = "toys"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-router = { version = "*" }
futures-util = { version = "*" }
poker = { git = "https://gitee.com/zzoe/poker.git", branch = "master" }
reqwest = { version = "*", features = ["cookies"] }
speedy = { version = "*" }
thiserror = { version = "*" }
toy-schema = { path = "../toy-schema" }
tracing = { version = "*" }
console_error_panic_hook = { version = "*" }
dioxus = { version = "*", features = ["web", "html"] }
tracing-wasm = { version = "*" }
web-sys = { version = "*" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
